--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="contact">연락처</string>
     <string name="account">계좌</string>
     <string name="won">%s원</string>
+    <string name="loading">로딩중</string>
 </resources>
